fix: space for feature normalization

--- a/week1/[Lecture1_2]LogisticRegression_and_PracticalBasics.ipynb
+++ b/week1/[Lecture1_2]LogisticRegression_and_PracticalBasics.ipynb
@@ -350,7 +350,7 @@
       "source": [
         "### impliment your code here: ###\n",
         "\n",
-        "df['feature'] = df['img'].apply(lambda x: )\n",
+        "df['feature'] = df['feature'].apply(lambda x: )\n",
         "\n",
         "### impliment your code here: ###"
       ],
