--- a/week1/[Lecture1_1]LinearRegression_and_PracticalBasics_class.ipynb
+++ b/week1/[Lecture1_1]LinearRegression_and_PracticalBasics_class.ipynb
@@ -1220,7 +1220,7 @@
         "colab_type": "text"
       },
       "source": [
-        "# Q: would you take |MAPE| or |MAP| as your scoring function?"
+        "# Q: would you take 1-|MAPE| or 1-|MPE| as your scoring function?"
       ]
     },
     {
