--- a/week2/[Lecture2]NeuralNetworks_class.ipynb
+++ b/week2/[Lecture2]NeuralNetworks_class.ipynb
@@ -1385,10 +1385,18 @@
     "from sklearn.metrics import mean_absolute_error, mean_squared_error\n",
     "\n",
     "def mean_absolute_percentage_error(y_true, y_pred): \n",
+    "    assert  len(list(filter(lambda x: x!=1, y_true.shape)))==1\n",
+    "    assert  len(list(filter(lambda x: x!=1, y_pred.shape)))==1\n",
+    "    y_true = y_true.reshape(-1)\n",
+    "    y_pred = y_pred.reshape(-1)\n",
     "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
     "    return np.mean(np.abs((y_true - y_pred) / y_true)) * 100\n",
     "\n",
-    "def mean_percentage_error(y_true, y_pred): \n",
+    "def mean_percentage_error(y_true, y_pred):\n",
+    "    assert  len(list(filter(lambda x: x!=1, y_true.shape)))==1\n",
+    "    assert  len(list(filter(lambda x: x!=1, y_pred.shape)))==1\n",
+    "    y_true = y_true.reshape(-1)\n",
+    "    y_pred = y_pred.reshape(-1)\n",
     "    y_true, y_pred = np.array(y_true), np.array(y_pred)\n",
     "    return np.mean((y_true - y_pred) / y_true) * 100"
    ]
