Week 5 materials: Fix typo

--- a/week5/[Lecture5]RecurrentNeuralNetwork.ipynb
+++ b/week5/[Lecture5]RecurrentNeuralNetwork.ipynb
@@ -131,15 +131,16 @@
     "id": "ncdUzJf85D1Z"
    },
    "source": [
-    "### Word Spliting\n",
+    "### Word Splitting\n",
     "----\n",
     "Convert each sentence into separate words sequence. Notice that not only for the dot (`.`), other stop words (e.g., comma (`,`), colon (`:`), semi-colon (`;`)., etc.) are also possible separators.\n",
     "> **Your task**:  \n",
-    "> Spliting each sentence into words list by using `tf.keras.preprocessing.text.text_to_word_sentence`. For example, for the following sentence:\n",
+    "> Splitting each sentence into words list by using `tf.keras.preprocessing.text.text_to_word_sentence`. For example, for the following sentence:\n",
     "> - Recurrent neural networks have a wide array of applications, including time series analysis, document classification, speech and voice recognition.\n",
     "> \n",
     "> The expected result is:\n",
     "> - `['recurrent', 'neural', 'networks', 'have', 'a', 'wide', 'array', 'of', 'applications', 'including', 'time', 'series', 'analysis', 'document', 'classification', 'speech', 'and', 'voice', 'recognition']`\n",
+    "> \n",
     "> ---\n",
     "> In the mean while, adjust the argument `MAX_SEQUENCE_LENGTH` based on the observation of the sequence length histogram."
    ]
